- Any exceptions or errors (ERROR or SEVERE) in the log. Warnings might be interesting, but probably not urgent

----------------------------------------------------------------

VERSIONS

Version 7.5.16 (24.05.2025)
- UPDATED: Java and JavaFX to 24.0.1
- UPDATED: Libraries
- FIXED: Concurrency problem while storing attacks
- FIXED: Only one jumpship could be moved per round and faction

Version 7.5.15 (11.04.2025)
- FIXING ATTEMPT 4: Concurrency problem while storing attacks

Version 7.5.14 (29.03.2025)
- FIXING ATTEMPT 3: Concurrency problem while storing attacks

Version 7.5.13 (07.03.2025)
- FIXING ATTEMPT 2: Concurrency problem while storing attacks
- ADDED: Pojo clone functions

Version 7.5.12 (21.02.2025)
- FIXING ATTEMPT: Concurrency problem while storing attacks

Version 7.5.11 (08.02.2025)
- ADDED: Handling for TT in attacks

Version 7.5.10 (28.01.2025)
- ADDED: Logs to discord thread creation to get necessary ids to create links
- CHANGED: Discord output
- UPDATED: Copyright notices

Version 7.5.7 (25.01.2025)
- FIXED: Attack button was enabled even if attack was not started
- FIXED: Showing the time since the round started instead the remaining time (manual round progression)

Version 7.5.6 (20.01.2025)
- CHANGED: Activated manual round progression

Version 7.5.5 (19.01.2025)
- CHANGED: Re-enabled attack images for DEV stations
- CHANGED: Re-enabled starmap images for DEV stations

Version 7.5.4 (18.01.2025)
- ADDED: A button to finalize round manually
- ADDED: A number of jumpships for DC and LA (test)
- REMOVED: Automatic finalize round

Version 7.5.3 (22.11.2024)
- ADDED: Browser component to integrate ASCard
- ADDED: Dev indicator icon in client
- ADDED: Exception handling and proper error message on failed connects (Netty)
- CHANGED: How message objects are handled
- CHANGED: Behaviour of the command history in case of finalizing rounds
- UPDATED: Libraries

Version 7.5.0 (21.09.2024)
- UPDATED: Java and JavaFX to 23

Version 7.4.34 (05.03.2024)